--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,12 @@
 	<meta charset='utf-8'>
 
 	<link rel='manifest' href='/manifest.json' crossorigin='use-credentials'>
+
+	<!-- FONTS -->
 	<link rel='preconnect' href='https://fonts.googleapis.com'>
-	<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin=''>
+	<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
 	<link
-		href='https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap'
+		href='https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
 		rel='stylesheet'>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 
