refactor to use immutable and new architecture

--- a/src/app.html
+++ b/src/app.html
@@ -100,6 +100,25 @@
 				media='(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)'>
 
 </head>
+<style>
+    html {
+        width: 100%;
+        height: 100%;
+    }
+
+    body {
+        width: 100%;
+        height: 100%;
+
+    }
+
+    main {
+        font-family: Fira Sans, Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+        Ubuntu, Cantarell, Droid Sans, Helvetica Neue, sans-serif;
+        font-size: 16px;
+        line-height: 1em;
+    }
+</style>
 <body>%svelte.head%
 
 
