--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,8 @@
 <html lang='en'>
 <head>
 	<meta charset='utf-8'>
+	<meta name="theme-color" content="#fff">
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
 
 	<link rel='manifest' href='/manifest.json' crossorigin='use-credentials'>
 
@@ -11,7 +13,6 @@
 	<link
 		href='https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
 		rel='stylesheet'>
-	<meta name='viewport' content='width=device-width, initial-scale=1'>
 
 	<link rel='icon' type='image/png' sizes='196x196'
 				href='/favicon-196.png'>
