--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 	<meta charset='utf-8'>
-	<meta name="theme-color" content="#fff">
+	<meta name="theme-color" content="#475569">
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 
 	<link rel='manifest' href='/manifest.json' crossorigin='use-credentials'>
