--- a/menu/about/index.html
+++ b/menu/about/index.html
@@ -175,19 +175,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-911d7d90.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-dbf4a16c.js">
-		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-145d6be3.js">
-		<link rel="modulepreload" href="/./_app/chunks/state-b7012d7d.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-39fe2c02.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-0dae7de9.js">
-		<link rel="modulepreload" href="/./_app/chunks/Separator-82d268d5.js">
-		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-de85a630.css">
+		<link rel="modulepreload" href="/./app/start-0b1ff217.js">
+		<link rel="modulepreload" href="/./app/chunks/vendor-d03ab36e.js">
+		<link rel="modulepreload" href="/./app/chunks/paths-7dc55c62.js">
+		<link rel="modulepreload" href="/./app/pages/__layout.svelte-863153d7.js">
+		<link rel="modulepreload" href="/./app/chunks/tick-9a5f09cc.js">
+		<link rel="modulepreload" href="/./app/pages/menu/__layout.svelte-024dc7ff.js">
+		<link rel="modulepreload" href="/./app/pages/menu/about.svelte-f801ff1f.js">
+		<link rel="modulepreload" href="/./app/chunks/Separator-59ce9830.js">
+		<link rel="stylesheet" href="/./app/assets/start-8077b9bf.css">
+		<link rel="stylesheet" href="/./app/assets/pages/__layout.svelte-59dbe1d4.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-911d7d90.js";
+			import { start } from "/./app/start-0b1ff217.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,9 +200,9 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-145d6be3.js"),
-						import("/./_app/pages/menu/__layout.svelte-39fe2c02.js"),
-						import("/./_app/pages/menu/about.svelte-0dae7de9.js")
+						import("/./app/pages/__layout.svelte-863153d7.js"),
+						import("/./app/pages/menu/__layout.svelte-024dc7ff.js"),
+						import("/./app/pages/menu/about.svelte-f801ff1f.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -247,7 +247,7 @@
 <div class="inline-flex text-blueGray-800 font-light uppercase items-center gap-2 w-full text-white mt-4">
 	Versão
 	<hr class="flex-1 w-full"></div>
-<div class="text-sm">1.1.3</div></div></div></div>
+<div class="text-sm">1.1.4</div></div></div></div>
 </main>
 
 
