--- a/focus/index.html
+++ b/focus/index.html
@@ -175,19 +175,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./app/start-dcf29ceb.js">
-		<link rel="modulepreload" href="/./app/chunks/vendor-d03ab36e.js">
-		<link rel="modulepreload" href="/./app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./app/pages/__layout.svelte-863153d7.js">
-		<link rel="modulepreload" href="/./app/chunks/tick-9a5f09cc.js">
-		<link rel="modulepreload" href="/./app/pages/focus.svelte-d1d723ea.js">
-		<link rel="modulepreload" href="/./app/chunks/FabContainer-21b4567b.js">
-		<link rel="stylesheet" href="/./app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./app/assets/pages/__layout.svelte-59dbe1d4.css">
-		<link rel="stylesheet" href="/./app/assets/FabContainer-56e440e6.css">
+		<link rel="modulepreload" href="/./_app/start-3bad4d7e.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-d03ab36e.js">
+		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-863153d7.js">
+		<link rel="modulepreload" href="/./_app/chunks/tick-9a5f09cc.js">
+		<link rel="modulepreload" href="/./_app/pages/focus.svelte-d1d723ea.js">
+		<link rel="modulepreload" href="/./_app/chunks/FabContainer-21b4567b.js">
+		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-59dbe1d4.css">
+		<link rel="stylesheet" href="/./_app/assets/FabContainer-56e440e6.css">
 
 		<script type="module">
-			import { start } from "/./app/start-dcf29ceb.js";
+			import { start } from "/./_app/start-3bad4d7e.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,8 +200,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./app/pages/__layout.svelte-863153d7.js"),
-						import("/./app/pages/focus.svelte-d1d723ea.js")
+						import("/./_app/pages/__layout.svelte-863153d7.js"),
+						import("/./_app/pages/focus.svelte-d1d723ea.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
