--- a/menu/about/index.html
+++ b/menu/about/index.html
@@ -175,19 +175,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./app/start-dcf29ceb.js">
-		<link rel="modulepreload" href="/./app/chunks/vendor-d03ab36e.js">
-		<link rel="modulepreload" href="/./app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./app/pages/__layout.svelte-863153d7.js">
-		<link rel="modulepreload" href="/./app/chunks/tick-9a5f09cc.js">
-		<link rel="modulepreload" href="/./app/pages/menu/__layout.svelte-024dc7ff.js">
-		<link rel="modulepreload" href="/./app/pages/menu/about.svelte-f801ff1f.js">
-		<link rel="modulepreload" href="/./app/chunks/Separator-59ce9830.js">
-		<link rel="stylesheet" href="/./app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./app/assets/pages/__layout.svelte-59dbe1d4.css">
+		<link rel="modulepreload" href="/./_app/start-3bad4d7e.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-d03ab36e.js">
+		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-863153d7.js">
+		<link rel="modulepreload" href="/./_app/chunks/tick-9a5f09cc.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-024dc7ff.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-fc189de1.js">
+		<link rel="modulepreload" href="/./_app/chunks/Separator-59ce9830.js">
+		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-59dbe1d4.css">
 
 		<script type="module">
-			import { start } from "/./app/start-dcf29ceb.js";
+			import { start } from "/./_app/start-3bad4d7e.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,9 +200,9 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./app/pages/__layout.svelte-863153d7.js"),
-						import("/./app/pages/menu/__layout.svelte-024dc7ff.js"),
-						import("/./app/pages/menu/about.svelte-f801ff1f.js")
+						import("/./_app/pages/__layout.svelte-863153d7.js"),
+						import("/./_app/pages/menu/__layout.svelte-024dc7ff.js"),
+						import("/./_app/pages/menu/about.svelte-fc189de1.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -247,7 +247,7 @@
 <div class="inline-flex text-blueGray-800 font-light uppercase items-center gap-2 w-full text-white mt-4">
 	Versão
 	<hr class="flex-1 w-full"></div>
-<div class="text-sm">1.1.4</div></div></div></div>
+<div class="text-sm">1.1.5</div></div></div></div>
 </main>
 
 
