--- a/focus/index.html
+++ b/focus/index.html
@@ -175,19 +175,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-3bad4d7e.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-d03ab36e.js">
+		<link rel="modulepreload" href="/./_app/start-911d7d90.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-dbf4a16c.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-863153d7.js">
-		<link rel="modulepreload" href="/./_app/chunks/tick-9a5f09cc.js">
-		<link rel="modulepreload" href="/./_app/pages/focus.svelte-d1d723ea.js">
-		<link rel="modulepreload" href="/./_app/chunks/FabContainer-21b4567b.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-145d6be3.js">
+		<link rel="modulepreload" href="/./_app/chunks/state-b7012d7d.js">
+		<link rel="modulepreload" href="/./_app/pages/focus.svelte-0a4cb6e0.js">
+		<link rel="modulepreload" href="/./_app/chunks/FabContainer-d006dd1b.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-59dbe1d4.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-de85a630.css">
 		<link rel="stylesheet" href="/./_app/assets/FabContainer-56e440e6.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-3bad4d7e.js";
+			import { start } from "/./_app/start-911d7d90.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,8 +200,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-863153d7.js"),
-						import("/./_app/pages/focus.svelte-d1d723ea.js")
+						import("/./_app/pages/__layout.svelte-145d6be3.js"),
+						import("/./_app/pages/focus.svelte-0a4cb6e0.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -223,11 +223,15 @@
 <main class="w-full h-full m-0 bg-white">
 
 <div class="inline-flex flex-col h-full w-full"><div class="inline-flex relative items-center w-ful p-4 text-blueGray-600">
-<button><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left text-blueGray-600"><polyline points="15 18 9 12 15 6"></polyline></svg></button></div>
+<button><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left text-blueGray-600"><polyline points="15 18 9 12 15 6"></polyline></svg></button>
+
+<div class="ml-auto inline-flex gap-2 items-center opacity-60 pr-2">
+	
+	</div></div>
 
 	
 	<div class="w-full inline-flex my-auto box-border flex-col overflow-y-scroll text-blueGray-600 gap-6 p-4 items-center"><p class="text-bg font-bold text-xl">Pronto!</p>
-<p class="font-light font-mono text-base whitespace-pre-wrap"></p>
+<p class="font-light text-sm font-mono text-base whitespace-pre-wrap"></p>
 <div class="inline-flex flex-col gap-2 px-4 pt-4 w-full"></div></div>
 
 	
