--- a/index.html
+++ b/index.html
@@ -175,21 +175,21 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-911d7d90.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-dbf4a16c.js">
+		<link rel="modulepreload" href="/./_app/start-967e3e68.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-25c8f5c9.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-145d6be3.js">
-		<link rel="modulepreload" href="/./_app/chunks/state-b7012d7d.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-de07f8fa.js">
-		<link rel="modulepreload" href="/./_app/chunks/FabContainer-d006dd1b.js">
-		<link rel="modulepreload" href="/./_app/chunks/Separator-82d268d5.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-f8baf76d.js">
+		<link rel="modulepreload" href="/./_app/chunks/tick-17453f69.js">
+		<link rel="modulepreload" href="/./_app/pages/index.svelte-70ded9c6.js">
+		<link rel="modulepreload" href="/./_app/chunks/FabContainer-99d89fbc.js">
+		<link rel="modulepreload" href="/./_app/chunks/Separator-5b6e6d4c.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-de85a630.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-59dbe1d4.css">
 		<link rel="stylesheet" href="/./_app/assets/pages/index.svelte-614aaaec.css">
 		<link rel="stylesheet" href="/./_app/assets/FabContainer-56e440e6.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-911d7d90.js";
+			import { start } from "/./_app/start-967e3e68.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -202,8 +202,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-145d6be3.js"),
-						import("/./_app/pages/index.svelte-de07f8fa.js")
+						import("/./_app/pages/__layout.svelte-f8baf76d.js"),
+						import("/./_app/pages/index.svelte-70ded9c6.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -225,13 +225,11 @@
 <main class="w-full h-full m-0 bg-white">
 
 <div class="flex flex-col items-stretch bg-blueGray-600 h-full overflow-hidden"><div class="flex justify-between items-center pb-8 px-4 pt-4 text-white rounded-b w-full"><div class="text-2xl">Pronto</div>
-<div class="cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info "><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg></div></div>
+<div class="cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu "><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></div></div>
 
 	<div class="transition-all ease-in-out duration-500 max-h-screen opacity-100 svelte-1saa0i4 hide"></div>
 
 	<div class="p-4 pt-6 flex-grow transition-all duration-300 overflow-y-scroll flex-col bg-white shadow border-bluGray-400 inline-flex rounded-t-2xl gap-2 svelte-1saa0i4"><span class="text-blueGray-800">Nenhuma atividade, clique no botão de + para adicionar.</span>
-
-
 
 
 
