--- a/focus/index.html
+++ b/focus/index.html
@@ -175,19 +175,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-e09550a6.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-25c8f5c9.js">
+		<link rel="modulepreload" href="/./_app/start-9d4f4059.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-9e23095b.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-f8baf76d.js">
-		<link rel="modulepreload" href="/./_app/chunks/tick-17453f69.js">
-		<link rel="modulepreload" href="/./_app/pages/focus.svelte-9d63d7ac.js">
-		<link rel="modulepreload" href="/./_app/chunks/FabContainer-99d89fbc.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-5c740b89.js">
+		<link rel="modulepreload" href="/./_app/chunks/state-8d67a974.js">
+		<link rel="modulepreload" href="/./_app/pages/focus.svelte-8cb3f448.js">
+		<link rel="modulepreload" href="/./_app/chunks/FabContainer-2b8c9ead.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-59dbe1d4.css">
-		<link rel="stylesheet" href="/./_app/assets/FabContainer-56e440e6.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-19c3e7cd.css">
+		<link rel="stylesheet" href="/./_app/assets/FabContainer-be0f404a.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-e09550a6.js";
+			import { start } from "/./_app/start-9d4f4059.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,8 +200,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-f8baf76d.js"),
-						import("/./_app/pages/focus.svelte-9d63d7ac.js")
+						import("/./_app/pages/__layout.svelte-5c740b89.js"),
+						import("/./_app/pages/focus.svelte-8cb3f448.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -220,14 +220,14 @@
 		<div id="svelte" style="width: 100%; height: 100%">
 
 
-<main class="w-full h-full m-0 bg-white">
+<main class="w-full h-full m-0 bg-white" data-theme="">
 
-<div class="inline-flex flex-col h-full w-full"><div class="inline-flex relative items-center w-ful p-4 text-blueGray-600">
-<button><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left text-blueGray-600"><polyline points="15 18 9 12 15 6"></polyline></svg></button></div>
+<div class="bg-base-100 text-base-content inline-flex flex-col h-full w-full"><div class="inline-flex relative items-center w-ful p-4">
+<button><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button></div>
 
 	
-	<div class="w-full inline-flex my-auto box-border flex-col overflow-y-scroll text-blueGray-600 gap-6 p-4 items-center"><p class="text-bg font-bold text-xl">Pronto!</p>
-<p class="font-light font-mono text-base whitespace-pre-wrap"></p>
+	<div class="text-accent w-full inline-flex my-auto box-border flex-col overflow-y-scroll gap-6 p-4 items-center"><p class="text-bg font-bold text-xl">Pronto!</p>
+<p class="font-light font-mono whitespace-pre-wrap"></p>
 <div class="inline-flex flex-col gap-2 px-4 pt-4 w-full"></div></div>
 
 	
