--- a/menu/about/index.html
+++ b/menu/about/index.html
@@ -171,23 +171,23 @@
 		}
 	</style>
 	<body>
-		
+		<title>Pronto</title>
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-e09550a6.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-25c8f5c9.js">
+		<link rel="modulepreload" href="/./_app/start-3385c3ce.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-90cda898.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-f8baf76d.js">
-		<link rel="modulepreload" href="/./_app/chunks/tick-17453f69.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-379bce53.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-94d4689c.js">
-		<link rel="modulepreload" href="/./_app/chunks/Separator-5b6e6d4c.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-33f34575.js">
+		<link rel="modulepreload" href="/./_app/chunks/state-d0752e44.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-7a04e77d.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-87fc9db1.js">
+		<link rel="modulepreload" href="/./_app/chunks/Separator-23d91dcd.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-59dbe1d4.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-19c3e7cd.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-e09550a6.js";
+			import { start } from "/./_app/start-3385c3ce.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,9 +200,9 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-f8baf76d.js"),
-						import("/./_app/pages/menu/__layout.svelte-379bce53.js"),
-						import("/./_app/pages/menu/about.svelte-94d4689c.js")
+						import("/./_app/pages/__layout.svelte-33f34575.js"),
+						import("/./_app/pages/menu/__layout.svelte-7a04e77d.js"),
+						import("/./_app/pages/menu/about.svelte-87fc9db1.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -221,33 +221,33 @@
 		<div id="svelte" style="width: 100%; height: 100%">
 
 
-<main class="w-full h-full m-0 bg-white"><div class="w-full h-full m-0 bg-blueGray-600"><button class="p-4"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left text-white"><polyline points="15 18 9 12 15 6"></polyline></svg></button>
-	<div class="text-white px-4 overflow-y-scroll inline-flex gap-2 text-xl flex-col items-stretch w-full" style="height: 76vh"><div class="inline-flex flex-col items-center pt-4 gap-2 w-full"><p>by Suaveware</p>
-<p class="text-base text-justify">Este aplicativo é de código livre sob a licença GPL-3 e seu código fonte está disponível neste
+
+
+<main class="w-full h-full m-0 bg-white" data-theme=""><div class="w-full h-full m-0 bg-base-300 text-base-content"><button class="p-4"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button>
+	<div class="px-4 overflow-y-scroll inline-flex gap-2 text-xl flex-col items-stretch w-full" style="height: 76vh"><div class="inline-flex flex-col text-base items-center pt-4 gap-2 w-full"><p class="text-2xl font-bold">by Suaveware</p>
+<p class="text-justify">Este aplicativo é de código livre sob a licença GPL-3 e seu código fonte está disponível neste
 	<a class="underline" href="https://github.com/luizcarlos1405/pronto">repositório no Github
 	</a>
 	.
 </p>
-<p class="text-base text-justify">Distribuído como <i>progressive web app</i> (PWA) através do endereço:
+<p class="text-justify">Distribuído como <i>progressive web app</i> (PWA) através do endereço:
 </p>
-<a class="underline text-base w-full" href="https://pronto.suaveware.dev">https://pronto.suaveware.dev
+<a class="underline w-full" href="https://pronto.suaveware.dev">https://pronto.suaveware.dev
 </a>
-<div class="inline-flex text-blueGray-800 font-light uppercase items-center gap-2 w-full text-white mt-4">
+<div class="inline-flex items-center gap-2 w-full mt-4">
 	Contato
-	<hr class="flex-1 w-full"></div>
-<div class="inline-flex text-base w-full flex-col gap-2"><p>Email: luizcarlos1405@suaveware.dev</p>
+	<hr class="flex-1 w-full bg-base-content"></div>
+<div class="inline-flex w-full flex-col gap-2"><p>Email: <a class="underline" href="luizcarlos1405@suaveware.dev">luizcarlos1405@suaveware.dev</a></p>
 	<p>Twitter:
-		<a class="underline text-base w-full" href="https://twitter.com/semmilho">@semmilho </a></p>
-	<p>YouTube: <a class="underline text-base w-full" href="https://youtube.com/CanalPalco">CanalPalco
-		</a></p>
+		<a class="underline w-full" href="https://twitter.com/semmilho">@semmilho </a></p>
+	<p>YouTube: <a class="underline w-full" href="https://youtube.com/CanalPalco">CanalPalco </a></p>
 	<p>TikTok:
-		<a class="underline text-base w-full" href="https://www.tiktok.com/@rsensato">@RSensato
-		</a></p></div>
+		<a class="underline w-full" href="https://www.tiktok.com/@rsensato">@RSensato </a></p></div>
 
-<div class="inline-flex text-blueGray-800 font-light uppercase items-center gap-2 w-full text-white mt-4">
+<div class="inline-flex items-center gap-2 w-full mt-4">
 	Versão
-	<hr class="flex-1 w-full"></div>
-<div class="text-sm">1.1.6</div></div></div></div>
+	<hr class="flex-1 w-full bg-base-content"></div>
+<div class="text-sm">1.2.2</div></div></div></div>
 </main>
 
 
