--- a/index.html
+++ b/index.html
@@ -170,17 +170,17 @@
 		}
 	</style>
 	<body>
-		<title>Pronto</title><meta name="theme-color" data-svelte="svelte-1asom3p">
+		<title>Pronto</title><meta name="theme-color" content="" data-svelte="svelte-1frfhyh">
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-3385c3ce.js">
+		<link rel="modulepreload" href="/./_app/start-035526c8.js">
 		<link rel="modulepreload" href="/./_app/chunks/vendor-90cda898.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
 		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-33f34575.js">
 		<link rel="modulepreload" href="/./_app/chunks/state-d0752e44.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-f20d06d4.js">
-		<link rel="modulepreload" href="/./_app/chunks/index-3e6ded5e.js">
+		<link rel="modulepreload" href="/./_app/pages/index.svelte-eae46db1.js">
+		<link rel="modulepreload" href="/./_app/chunks/index-e7af501e.js">
 		<link rel="modulepreload" href="/./_app/chunks/FabContainer-d034607e.js">
 		<link rel="modulepreload" href="/./_app/chunks/Separator-23d91dcd.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
@@ -189,7 +189,7 @@
 		<link rel="stylesheet" href="/./_app/assets/FabContainer-be0f404a.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-3385c3ce.js";
+			import { start } from "/./_app/start-035526c8.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -203,7 +203,7 @@
 					error: null,
 					nodes: [
 						import("/./_app/pages/__layout.svelte-33f34575.js"),
-						import("/./_app/pages/index.svelte-f20d06d4.js")
+						import("/./_app/pages/index.svelte-eae46db1.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
