--- a/focus/index.html
+++ b/focus/index.html
@@ -170,23 +170,23 @@
 		}
 	</style>
 	<body>
-		<title>Focus</title>
+		<title>Focus</title><meta name="theme-color" content="" data-svelte="svelte-1frfhyh">
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-035526c8.js">
+		<link rel="modulepreload" href="/./_app/start-5e7f9d2e.js">
 		<link rel="modulepreload" href="/./_app/chunks/vendor-90cda898.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
 		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-33f34575.js">
 		<link rel="modulepreload" href="/./_app/chunks/state-d0752e44.js">
-		<link rel="modulepreload" href="/./_app/pages/focus.svelte-75716723.js">
-		<link rel="modulepreload" href="/./_app/chunks/FabContainer-d034607e.js">
+		<link rel="modulepreload" href="/./_app/pages/focus.svelte-5f2faa9f.js">
+		<link rel="modulepreload" href="/./_app/chunks/ThemeColorChanger-97bd5090.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
 		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-19c3e7cd.css">
-		<link rel="stylesheet" href="/./_app/assets/FabContainer-be0f404a.css">
+		<link rel="stylesheet" href="/./_app/assets/ThemeColorChanger-a9ea57b5.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-035526c8.js";
+			import { start } from "/./_app/start-5e7f9d2e.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -200,7 +200,7 @@
 					error: null,
 					nodes: [
 						import("/./_app/pages/__layout.svelte-33f34575.js"),
-						import("/./_app/pages/focus.svelte-75716723.js")
+						import("/./_app/pages/focus.svelte-5f2faa9f.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -222,6 +222,8 @@
 
 
 <main class="w-full h-full m-0 bg-white" data-theme="">
+
+
 
 <div class="bg-base-100 text-base-content inline-flex flex-col h-full w-full"><div class="inline-flex relative items-center w-ful p-4">
 <button><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button></div>
