--- a/focus/index.html
+++ b/focus/index.html
@@ -174,19 +174,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-5e7f9d2e.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-90cda898.js">
+		<link rel="modulepreload" href="/./_app/start-d087bad8.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-1875a1a5.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-33f34575.js">
-		<link rel="modulepreload" href="/./_app/chunks/state-d0752e44.js">
-		<link rel="modulepreload" href="/./_app/pages/focus.svelte-5f2faa9f.js">
-		<link rel="modulepreload" href="/./_app/chunks/ThemeColorChanger-97bd5090.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-892ada0b.js">
+		<link rel="modulepreload" href="/./_app/chunks/tick-4d4ec63e.js">
+		<link rel="modulepreload" href="/./_app/pages/focus.svelte-d79ebc61.js">
+		<link rel="modulepreload" href="/./_app/chunks/FabContainer-c1141f07.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
 		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-19c3e7cd.css">
-		<link rel="stylesheet" href="/./_app/assets/ThemeColorChanger-a9ea57b5.css">
+		<link rel="stylesheet" href="/./_app/assets/FabContainer-be0f404a.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-5e7f9d2e.js";
+			import { start } from "/./_app/start-d087bad8.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -199,8 +199,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-33f34575.js"),
-						import("/./_app/pages/focus.svelte-5f2faa9f.js")
+						import("/./_app/pages/__layout.svelte-892ada0b.js"),
+						import("/./_app/pages/focus.svelte-d79ebc61.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -221,7 +221,7 @@
 
 
 
-<main class="w-full h-full m-0 bg-white" data-theme="">
+<main class="w-full h-full m-0 bg-white">
 
 
 
@@ -242,4 +242,7 @@
 	
 </div>
 	</body>
+	<script>
+		document.body.setAttribute('data-theme', localStorage.getItem('theme'));
+	</script>
 </html>
