--- a/menu/about/index.html
+++ b/menu/about/index.html
@@ -174,19 +174,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-5e7f9d2e.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-90cda898.js">
+		<link rel="modulepreload" href="/./_app/start-d087bad8.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-1875a1a5.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-33f34575.js">
-		<link rel="modulepreload" href="/./_app/chunks/state-d0752e44.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-7a04e77d.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-87fc9db1.js">
-		<link rel="modulepreload" href="/./_app/chunks/Separator-23d91dcd.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-892ada0b.js">
+		<link rel="modulepreload" href="/./_app/chunks/tick-4d4ec63e.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-9d9d52a9.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-e2c52e2e.js">
+		<link rel="modulepreload" href="/./_app/chunks/Separator-666665a7.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
 		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-19c3e7cd.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-5e7f9d2e.js";
+			import { start } from "/./_app/start-d087bad8.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -199,9 +199,9 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-33f34575.js"),
-						import("/./_app/pages/menu/__layout.svelte-7a04e77d.js"),
-						import("/./_app/pages/menu/about.svelte-87fc9db1.js")
+						import("/./_app/pages/__layout.svelte-892ada0b.js"),
+						import("/./_app/pages/menu/__layout.svelte-9d9d52a9.js"),
+						import("/./_app/pages/menu/about.svelte-e2c52e2e.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -222,7 +222,7 @@
 
 
 
-<main class="w-full h-full m-0 bg-white" data-theme=""><div class="w-full h-full m-0 bg-base-300 text-base-content"><button class="p-4"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button>
+<main class="w-full h-full m-0 bg-white"><div class="w-full h-full m-0 bg-base-300 text-base-content"><button class="p-4"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button>
 	<div class="px-4 overflow-y-scroll inline-flex gap-2 text-xl flex-col items-stretch w-full" style="height: 76vh"><div class="inline-flex flex-col text-base items-center pt-4 gap-2 w-full"><p class="text-2xl font-bold">by Suaveware</p>
 <p class="text-justify">Este aplicativo é de código livre sob a licença GPL-3 e seu código fonte está disponível neste
 	<a class="underline" href="https://github.com/luizcarlos1405/pronto">repositório no Github
@@ -254,4 +254,7 @@
 	
 </div>
 	</body>
+	<script>
+		document.body.setAttribute('data-theme', localStorage.getItem('theme'));
+	</script>
 </html>
