--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="theme-color" content="#475569" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
@@ -175,4 +174,7 @@
 
 		<div id="svelte" style="width: 100%; height: 100%">%svelte.body%</div>
 	</body>
+	<script>
+		document.body.setAttribute('data-theme', localStorage.getItem('theme'));
+	</script>
 </html>
