--- a/menu/about/index.html
+++ b/menu/about/index.html
@@ -174,19 +174,21 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-db8c7198.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-6f51b870.js">
+		<link rel="modulepreload" href="/./_app/start-786d9b57.js">
+		<link rel="modulepreload" href="/./_app/chunks/vendor-c3741222.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-e3180fae.js">
-		<link rel="modulepreload" href="/./_app/chunks/tick-e562c02b.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-5e3b0abf.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-05a1cb1b.js">
-		<link rel="modulepreload" href="/./_app/chunks/Separator-ec0beae5.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-c37734cf.js">
+		<link rel="modulepreload" href="/./_app/chunks/tick-cf308ed2.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-95ef0bd8.js">
+		<link rel="modulepreload" href="/./_app/chunks/TopBar-e1b953c3.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-eb6b0f2a.js">
+		<link rel="modulepreload" href="/./_app/chunks/Separator-947fe102.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-4e484611.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-e27ae88e.css">
+		<link rel="stylesheet" href="/./_app/assets/TopBar-5de6adb8.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-db8c7198.js";
+			import { start } from "/./_app/start-786d9b57.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -199,9 +201,9 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-e3180fae.js"),
-						import("/./_app/pages/menu/__layout.svelte-5e3b0abf.js"),
-						import("/./_app/pages/menu/about.svelte-05a1cb1b.js")
+						import("/./_app/pages/__layout.svelte-c37734cf.js"),
+						import("/./_app/pages/menu/__layout.svelte-95ef0bd8.js"),
+						import("/./_app/pages/menu/about.svelte-eb6b0f2a.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -222,7 +224,9 @@
 
 
 
-<main class="w-full h-full m-0 bg-white"><div class="w-full h-full m-0 bg-base-300 text-base-content"><button class="p-4"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button>
+<main class="w-full h-full m-0 bg-white"><div class="w-full h-full m-0 bg-base-300 text-base-content"><div class="w-full sticky top-0 z-20"><div class="flex justify-between items-center pb-6 px-8 pt-8 rounded-b w-full svelte-10azmma   bg300"><button><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left "><polyline points="15 18 9 12 15 6"></polyline></svg></button></div>
+	<div class="w-full h-12 bg-gradient-to-b svelte-10azmma   bggradient300"></div>
+</div>
 	<div class="px-4 overflow-y-scroll inline-flex gap-2 text-xl flex-col items-stretch w-full" style="height: 76vh"><div class="inline-flex flex-col text-base items-center pt-4 gap-2 w-full"><p class="text-2xl font-bold">by Suaveware</p>
 <p class="text-justify">Este aplicativo é de código livre sob a licença GPL-3 e seu código fonte está disponível neste
 	<a class="underline" href="https://github.com/luizcarlos1405/pronto">repositório no Github
