--- a/focus/index.html
+++ b/focus/index.html
@@ -174,12 +174,12 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-9a1db68e.js">
+		<link rel="modulepreload" href="/./_app/start-cab40f20.js">
 		<link rel="modulepreload" href="/./_app/chunks/vendor-c3741222.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
 		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-b4e05369.js">
 		<link rel="modulepreload" href="/./_app/chunks/tick-cf308ed2.js">
-		<link rel="modulepreload" href="/./_app/pages/focus.svelte-6fd11c01.js">
+		<link rel="modulepreload" href="/./_app/pages/focus.svelte-7abf881c.js">
 		<link rel="modulepreload" href="/./_app/chunks/FabContainer-8061c6f0.js">
 		<link rel="modulepreload" href="/./_app/chunks/TopBar-e1b953c3.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
@@ -188,7 +188,7 @@
 		<link rel="stylesheet" href="/./_app/assets/TopBar-5de6adb8.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-9a1db68e.js";
+			import { start } from "/./_app/start-cab40f20.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -202,7 +202,7 @@
 					error: null,
 					nodes: [
 						import("/./_app/pages/__layout.svelte-b4e05369.js"),
-						import("/./_app/pages/focus.svelte-6fd11c01.js")
+						import("/./_app/pages/focus.svelte-7abf881c.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -232,7 +232,7 @@
 </div>
 
 	
-	<div class="text-accent w-full space-y-6 my-auto flex flex-col justify-center items-center"><p class="text-bg font-bold text-2xl mb-6">Pronto!</p>
+	<div class="text-accent w-full space-y-6 my-auto flex flex-col justify-center items-center"><p class="text-bg font-bold text-2xl mb-6 px-8">Pronto!</p>
 <div class="px-8"><p class="font-light font-mono whitespace-pre-wrap mb-6"></p></div>
 <div class="inline-flex flex-col gap-2 px-10 pt-4 w-full pb-12"></div></div>
 
